# Rustant

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  SECURITY.md  deny.toml
rustant-cli/: Cargo.toml
rustant-cli/examples/: arxiv_browser_demo.rs
rustant-cli/src/: channel_setup.rs  commands.rs  main.rs  markdown.rs  repl.rs  repl_input.rs  setup.rs  slash.rs
rustant-cli/src/tui/: app.rs  callback.rs  event.rs  mod.rs  theme.rs
rustant-core/: Cargo.toml
rustant-core/benches/: core_benchmarks.rs
rustant-core/src/: agent.rs  anomaly.rs  audit.rs  brain.rs  cache.rs  config.rs  consent.rs  council.rs  credentials.rs  data_flow.rs  decision_log.rs  embeddings.rs  encryption.rs  error.rs  evaluation.rs  explanation.rs  hooks.rs  indexer.rs  injection.rs  lib.rs  memory.rs  merkle.rs  metrics.rs  oauth.rs  pairing.rs  persistence.rs  personas.rs  plan.rs  policy.rs  project_detect.rs  redact.rs  replay.rs  risk_scorer.rs  safety.rs  sandbox.rs  sanitize.rs  search.rs  secret_ref.rs  session_manager.rs  summarizer.rs  (+2 more)
rustant-core/src/ast/: languages.rs  mod.rs  references.rs
rustant-core/src/browser/: cdp.rs  chromium.rs  mod.rs  persistence.rs  security.rs  session.rs  snapshot.rs
rustant-core/src/canvas/: components.rs  mod.rs  protocol.rs  renderer.rs
rustant-core/src/channels/: agent_bridge.rs  auto_reply.rs  cdc.rs  digest.rs  discord.rs  email.rs  email_intelligence.rs  imessage.rs  intelligence.rs  irc.rs  manager.rs  matrix.rs  mod.rs  normalize.rs  routing.rs  scheduler_bridge.rs  signal.rs  slack.rs  sms.rs  style_tracker.rs  teams.rs  telegram.rs  types.rs  webchat.rs  webhook.rs  whatsapp.rs
rustant-core/src/daemon/: ipc.rs  lifecycle.rs  mod.rs  process.rs
rustant-core/src/gateway/: auth.rs  channel_bridge.rs  connection.rs  events.rs  mod.rs  node_bridge.rs  server.rs  session.rs
rustant-core/src/hydration/: assembler.rs  mod.rs  selector.rs
rustant-core/src/moe/: context.rs  experts.rs  mod.rs  prompt_optimizer.rs  router.rs  warmup.rs
rustant-core/src/multi/: isolation.rs  messaging.rs  mod.rs  orchestrator.rs  routing.rs  spawner.rs  teams.rs
rustant-core/src/nodes/: consent.rs  discovery.rs  linux.rs  macos.rs  manager.rs  mod.rs  types.rs
rustant-core/src/providers/: anthropic.rs  failover.rs  gemini.rs  mod.rs  models.rs  openai_compat.rs  rate_limiter.rs  warmup.rs
rustant-core/src/repo_map/: graph.rs  mod.rs  ranking.rs
rustant-core/src/research/: contradiction.rs  decomposition.rs  engine.rs  mod.rs  output.rs  session.rs  sources.rs  synthesis.rs
rustant-core/src/scheduler/: cron.rs  heartbeat.rs  jobs.rs  mod.rs  persistence.rs  webhook.rs
rustant-core/src/siri/: bridge.rs  mod.rs  responder.rs  shortcuts.rs
rustant-core/src/skills/: mod.rs  parser.rs  types.rs  validator.rs
rustant-core/src/verification/: feedback.rs  mod.rs  runner.rs
rustant-core/src/voice/: audio_io.rs  meeting_session.rs  mod.rs  pipeline.rs  session.rs  stt.rs  toggle.rs  tts.rs  types.rs  vad.rs  wake.rs
rustant-core/src/workflow/: builtins.rs  executor.rs  mod.rs  parser.rs  templates.rs  types.rs
rustant-core/tests/: agent_integration.rs  browser_integration.rs  e2e_channel_agent.rs  gateway_rest_api.rs  integration_channels.rs  load_tests.rs  proptest_core.proptest-regressions  proptest_core.rs  security_audit.rs  voice_integration.rs  voice_live_test.rs
rustant-mcp/: Cargo.toml
rustant-mcp/src/: client.rs  discovery.rs  error.rs  handlers.rs  lib.rs  protocol.rs  resources.rs  transport.rs
rustant-mcp/tests/: mcp_security_tests.rs
rustant-ml/: Cargo.toml
rustant-ml/src/: config.rs  error.rs  lib.rs  pillars.rs  runtime.rs
rustant-ml/src/algorithms/: classical.rs  evaluation.rs  explainability.rs  mod.rs  neural.rs
rustant-ml/src/data/: lineage.rs  mod.rs  schema.rs  source.rs  storage.rs  transform.rs  validate.rs
rustant-ml/src/eval/: agreement.rs  benchmark.rs  ci_integration.rs  domain_evals.rs  error_analysis.rs  generators.rs  llm_judge.rs  mod.rs  traces.rs
rustant-ml/src/features/: definition.rs  mod.rs  registry.rs  store.rs  transforms.rs
rustant-ml/src/inference/: formats.rs  mod.rs  model_registry.rs  profiler.rs  serving.rs  streaming.rs
rustant-ml/src/interpretability/: attention.rs  concept_probe.rs  explanations.rs  features.rs  mod.rs  token_importance.rs
rustant-ml/src/llm/: adapter.rs  alignment.rs  dataset_prep.rs  eval_harness.rs  finetune.rs  mod.rs  quantize.rs  red_team.rs
rustant-ml/src/rag/: chunk.rs  collections.rs  context.rs  diagnostics.rs  evaluation.rs  grounding.rs  ingest.rs  mod.rs  pipeline.rs  reranker.rs  retriever.rs
rustant-ml/src/research/: bibliography.rs  comparison.rs  datasets.rs  literature_review.rs  methodology.rs  mod.rs  notebooks.rs  reproducibility.rs  synthesis.rs
rustant-ml/src/safety/: alignment.rs  content.rs  data_safety.rs  mod.rs  (+2 more)
rustant-plugins/: Cargo.toml
rustant-plugins/src/: hooks.rs  lib.rs  loader.rs  security.rs  wasm_loader.rs
rustant-plugins/tests/: plugin_lifecycle.rs
rustant-security/: Cargo.toml
rustant-security/src/: config.rs  consensus.rs  error.rs  finding.rs  lib.rs  memory_bridge.rs  redaction.rs  scanner.rs
rustant-tools/: Cargo.toml
rustant-tools/benches/: tool_benchmarks.rs
rustant-tools/src/: accessibility.rs  alert_manager.rs  arxiv.rs  arxiv_api.rs  browser.rs  canvas.rs  career_intel.rs  checkpoint.rs  code_intelligence.rs  codebase_search.rs  compress.rs  contacts.rs  content_engine.rs  daily_briefing.rs  database.rs  deployment_intel.rs  dev_server.rs  experiment_tracker.rs  file.rs  file_organizer.rs  finance.rs  flashcards.rs  git.rs  gui_scripting.rs  homekit.rs  http_api.rs  imessage.rs  inbox.rs  knowledge_graph.rs  kubernetes.rs  lib.rs  life_planner.rs  lint.rs  macos.rs  macros.rs  meeting.rs  oncall.rs  paper_sources.rs  pdf_generate.rs  photos.rs  (+21 more)
rustant-tools/tests/: macos_integration.rs  tool_composition.rs
rustant-ui/: Cargo.toml  tauri.conf.json
rustant-ui/frontend/: app.js  index.html  style.css
rustant-ui/src/: lib.rs  main.rs
(+256 files in other folders)
