[workspace]
resolver = "2"
members = [
    "rustant-core",
    "rustant-tools",
    "rustant-cli",
    "rustant-mcp",
    "rustant-ui",
    "rustant-plugins",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Dev Jadhav"]
repository = "https://github.com/DevJadhav/Rustant"
description = "A high-performance, privacy-first autonomous personal agent built in Rust"

[workspace.dependencies]
# Core runtime & async
tokio = { version = "1.47", features = ["rt-multi-thread", "sync", "time", "macros", "net", "fs", "io-util", "io-std", "process", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization & data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Configuration
figment = { version = "0.10", features = ["toml", "env", "json"] }
directories = "5.0"
dotenvy = "0.15"

# Networking
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Email (SMTP + IMAP)
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname", "pool", "smtp-transport"] }
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
native-tls = "0.2"
tokio-native-tls = "0.3"

# Encoding
base64 = "0.22"

# OAuth / browser
open = "5"
url = "2"
urlencoding = "2"

# CLI & TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream", "bracketed-paste"] }
tui-textarea = { version = "0.7", features = ["crossterm", "search"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
textwrap = "0.16"
unicode-width = "0.2"

# Interactive prompts
dialoguer = "0.11"

# Fuzzy matching
nucleo-matcher = "0.3"

# Clipboard
arboard = "3.4"

# Git (native bindings)
git2 = { version = "0.19", features = ["vendored-libgit2"] }

# Filesystem sandboxing
cap-std = "3.4"

# WASM sandboxing
wasmi = { version = "1.0", features = ["default"] }

# Dynamic library loading
libloading = "0.8"

# Self-update
self_update = "0.41"

# Credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Diff computation
similar = "2.6"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# File system traversal
walkdir = "2.5"
ignore = "0.4"

# Full-text search
tantivy = "0.22"

# SQLite (for vector storage)
rusqlite = { version = "0.32", features = ["bundled"] }

# WebSocket gateway
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# TLS certificate generation (self-signed, for local OAuth callbacks)
rcgen = "0.13"
rustls = { version = "0.23", features = ["aws_lc_rs"] }

# Cron expression parsing
cron = "0.13"

# Audio (voice module)
hound = "3.5"
cpal = "0.15"
whisper-rs = "0.14"

# Browser automation (CDP)
chromiumoxide = "0.8"

# Token counting
tiktoken-rs = "0.9"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property testing
proptest = "1.5"

# Encryption (session at rest)
aes-gcm = "0.10"

# Archive / compression
zip = "2.1"

# Template engine
handlebars = "6.2"

# PDF generation
genpdf = "0.2"

# Timezone support
chrono-tz = "0.10"

# Internal crates
rustant-core = { path = "rustant-core" }
rustant-tools = { path = "rustant-tools" }
rustant-mcp = { path = "rustant-mcp" }

[profile.release]
lto = "thin"
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
