[package]
name = "rustant-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI and TUI application for Rustant"

[[bin]]
name = "rustant"
path = "src/main.rs"

[dependencies]
rustant-core = { workspace = true }
rustant-tools = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
async-trait = "0.1"
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
syntect = { workspace = true }
textwrap = { workspace = true }
unicode-width = { workspace = true }
nucleo-matcher = { workspace = true }
arboard = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.14"
