[package]
name = "rustant"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Privacy-first autonomous personal agent — CLI and REPL for Rustant"
readme = "../README.md"
keywords = ["agent", "llm", "ai", "automation", "assistant"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rustant"
path = "src/main.rs"

[dependencies]
rustant-core = { workspace = true }
rustant-tools = { workspace = true }
rustant-mcp = { workspace = true }
rustant-plugins = { workspace = true }
rustant-security = { workspace = true }
rustant-ml = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
async-trait = "0.1"
crossterm = { workspace = true }
base64 = { workspace = true }
syntect = { workspace = true }
textwrap = { workspace = true }
unicode-width = { workspace = true }
nucleo-matcher = { workspace = true }
arboard = { workspace = true }
similar = { workspace = true }
dialoguer = { workspace = true }
keyring = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
openssl = { workspace = true, optional = true }

[features]
default = []
browser = ["rustant-core/browser"]
voice = ["rustant-core/voice"]
vendored-openssl = ["dep:openssl"]

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.14"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rustant-{ target }.tar.gz"
bin-dir = "rustant"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/rustant-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/rustant-linux-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rustant-macos-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rustant-macos-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/rustant-windows-x86_64.exe"
pkg-fmt = "bin"
