[package]
name = "rustant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core agent logic for Rustant - LLM interface, memory, safety, and orchestration"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
figment = { workspace = true }
directories = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
pin-project-lite = "0.2"
tiktoken-rs = { workspace = true }
cap-std = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.14"
