[package]
name = "rustant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core agent logic for Rustant - LLM interface, memory, safety, and orchestration"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
figment = { workspace = true }
directories = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
cron = { workspace = true }
lettre = { workspace = true }
async-imap = { workspace = true }
native-tls = { workspace = true }
tokio-native-tls = { workspace = true }
base64 = { workspace = true }
open = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
pin-project-lite = "0.2"
tiktoken-rs = { workspace = true }
cap-std = { workspace = true }
keyring = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
tantivy = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
hound = { workspace = true }

# Optional voice dependencies (only compiled with "voice" feature)
cpal = { workspace = true, optional = true }
whisper-rs = { workspace = true, optional = true }

# Optional browser automation (only compiled with "browser" feature)
chromiumoxide = { workspace = true, optional = true }

[features]
default = []
voice = ["dep:cpal", "dep:whisper-rs"]
browser = ["dep:chromiumoxide"]

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.14"
