[package]
name = "rustant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core agent logic for Rustant - LLM interface, memory, safety, and orchestration"
keywords = ["agent", "llm", "ai", "automation", "privacy"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
figment = { workspace = true }
directories = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
async-trait = "0.1"
cron = { workspace = true }
lettre = { workspace = true }
async-imap = { workspace = true }
native-tls = { workspace = true }
tokio-native-tls = { workspace = true }
base64 = { workspace = true }
open = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
pin-project-lite = "0.2"
tiktoken-rs = { workspace = true }
cap-std = { workspace = true }
keyring = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
tantivy = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
hound = { workspace = true }
self_update = { workspace = true }
aes-gcm = { workspace = true }
openssl = { workspace = true }
unicode-normalization = "0.1"
regex = "1"

# Optional voice dependencies (only compiled with "voice" feature)
cpal = { workspace = true, optional = true }
whisper-rs = { workspace = true, optional = true }

# Optional browser automation (only compiled with "browser" feature)
chromiumoxide = { workspace = true, optional = true }

# Optional tree-sitter AST parsing (feature-gated per language)
tree-sitter = { workspace = true, optional = true }
streaming-iterator = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }

# Graph data structure for code reference graph
petgraph = { workspace = true }

# LRU cache for MoE classification routing
lru = "0.12"

[features]
default = ["ast-rust"]
voice = ["dep:cpal", "dep:whisper-rs"]
browser = ["dep:chromiumoxide"]
semantic-search = []
ast-rust = ["dep:tree-sitter", "dep:streaming-iterator", "dep:tree-sitter-rust"]
ast-python = ["dep:tree-sitter", "dep:streaming-iterator", "dep:tree-sitter-python"]
ast-javascript = ["dep:tree-sitter", "dep:streaming-iterator", "dep:tree-sitter-javascript", "dep:tree-sitter-typescript"]
ast-go = ["dep:tree-sitter", "dep:streaming-iterator", "dep:tree-sitter-go"]
ast-java = ["dep:tree-sitter", "dep:streaming-iterator", "dep:tree-sitter-java"]
ast-all = ["ast-rust", "ast-python", "ast-javascript", "ast-go", "ast-java"]

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.14"
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
