[package]
name = "rustant-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) server implementation for Rustant"
keywords = ["agent", "llm", "ai", "mcp", "protocol"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rustant-core = { workspace = true }
rustant-tools = { workspace = true }
rustant-security = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
jsonschema = "0.27"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
