[package]
name = "rustant-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tool implementations for Rustant - file, git, shell, and search tools"
keywords = ["agent", "llm", "ai", "automation", "privacy"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rustant-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
base64 = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
globset = "0.4"
git2 = { workspace = true }
wasmi = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
similar = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }
handlebars = { workspace = true }
genpdf = { workspace = true }
chrono-tz = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.14"
criterion = { workspace = true }

[[bench]]
name = "tool_benchmarks"
harness = false
