[package]
name = "rustant-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tauri-based dashboard UI for Rustant"

[dependencies]
rustant-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tauri = { version = "2", features = ["devtools"] }
tower-http = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
